# terminal_jockey

./: README.md  SUMMARY.md  book.toml
crates/args_bar/: Cargo.toml
crates/args_bar/src/lib/: mod.rs
crates/args_bar/src/lib/models/: args_bar.rs  encoding.rs  input_parameter.rs  input_value.rs  mod.rs
crates/args_bar/src/lib/support/: mod.rs  prelude.rs
crates/args_bar/src/lib/support/factories/: mod.rs
docs/crates/: args_bar.md
